--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,14 @@ body {
 }
 
 .text-section {
-    background-color: #E6E9E6; /* Daha açık bir renk tonu */
-    width: 40%; /* Sağ tarafın genişliği */
+    background-color: #D3D7CF; /* Daha açık bir renk tonu */
+    width: 40%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 20px;
+    color: #333;
+    box-sizing: border-box; /* Paddingleri genişliğe dahil etmek için */
 }
 
 .category-link {
@@ -30,6 +32,14 @@ body {
     display: block;
     margin-bottom: 10px;
     font-size: 18px;
+    font-weight: bold;
+}
+
+.description {
+    margin-top: 20px;
+    font-size: 14px;
+    line-height: 1.5;
+    color: #666;
 }
 
 .button-explore {
@@ -45,4 +55,10 @@ body {
     text-decoration: none;
     width: fit-content;
     margin-top: 20px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.button-explore:hover {
+    background-color: #4B4B4B;
+    color: #FFFFFF;
 }
